# psxbsp

./: Cargo.toml
src/: bsp.rs  dedup.rs  geometry.rs  main.rs  reduce.rs  triangulation.rs
