[package]
name = "psxbsp"
version = "0.1.0"
authors = ["Eliza Velasquez"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obj-rs = "0.6"
anyhow = "1.0"
nalgebra = { version = "0.28", features = ["serde-serialize"] }
float-cmp = "0.8"
itertools = "0.10.1"
rayon = "1.5.1"
serde = "1.0.126"
serde_yaml = "0.8.17"
earcutr = "0.2.0"
